Fix pyproject toml for tron
* This correctly specifies the tron_actorcore dependency.
* Adds dev dependencies.
* Adding branch name to `tron_actorcore` requirement until INSTRM-2641 is merged in that repo.
  * Note, once https://github.com/Subaru-PFS/tron_actorcore/pull/18 is merged this branch name should be removed.
* Adding full clone of repo to GHA so versions work; GHA test displays version
* Don't add dynamice `version.py` to git.

--- a/.github/workflows/pip-install.yml
+++ b/.github/workflows/pip-install.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          # Need to clone everything for the git tags.
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -30,4 +33,4 @@ jobs:
 
       - name: Verify import
         run: |
-          python -c "import ics.utils as u; print('Imported ics.utils from:', u.__file__)"
+          python -c "from ics.utils.version import __version__; print('Created version', __version__)"
