Common database accessors for ics_utils - tickets/INSTRM-2638
* Add a generic `DB` class that handles the connections and common functions. Also add a dumb `ReadOnlyDB` subclass for Gaia catalog.
* Add convenience classes for `OpDB`, 'QaDB', and `GaiaDB`.
* Update `ics.utils.opdb` to use the new database class while maintaining backwards compatibility. Deprecation warnings were added to the old class.
* Update the `pyproject.toml` for database dependencies.
* Update README to show database usage examples.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,19 @@ description = "Common util tools for the Subaru ICS actors"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "numpy",
     "astropy",
-    "pytz",
-    "pandas",
-    "psycopg2-binary",
-    "scipy",
+    "astropy_iers_data",
     "fitsio",
     "gitpython",
-    "twisted",
-    "sdss-opscore",
+    "numpy",
+    "pandas",
+    "psycopg2-binary",
+    "pytz",
+    "scipy",
     "sdss-actorcore",
-    "astropy_iers_data",
+    "sdss-opscore",
+    "sqlalchemy",
+    "twisted",
 ]
 dynamic = ["version"]
 
