Update tron_actorcore dependency - tickets/INSTRM-2655
* Remove branch name from dependency.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "numpy",
     "pandas",
     "pfs-datamodel @ git+https://github.com/Subaru-PFS/datamodel.git",
-    "pfs-tron-actorcore @ git+https://github.com/Subaru-PFS/tron_actorcore.git@tickets/INSTRM-2641",
+    "pfs-tron-actorcore @ git+https://github.com/Subaru-PFS/tron_actorcore.git",
     "pfs-utils @ git+https://github.com/Subaru-PFS/pfs_utils.git",
     "psycopg2-binary",
     "pytz",
