--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pfs-ics-utils"
+name = "ics-utils"
 description = "Common util tools for the Subaru ICS actors"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -35,7 +35,6 @@ dev = [
     "pytest>=8.0",
     "ruff"
 ]
-
 
 [tool.setuptools.packages.find]
 where = ["python/"]
